--- a/google-startup-scripts.service
+++ b/google-startup-scripts.service
@@ -1,12 +1,12 @@
 [Unit]
 Description=Google Compute Engine Startup Scripts
 Wants=network-online.target rsyslog.service
-After=network-online.target rsyslog.service google-guest-agent-manager.service
+After=network-online.target rsyslog.service google-guest-agent.service
 Before=apt-daily.service
 
 [Service]
 Type=oneshot
-ExecStart=/usr/bin/google_metadata_script_runner_adapt startup
+ExecStart=/usr/bin/google_metadata_script_runner startup
 #TimeoutStartSec is ignored for Type=oneshot service units.
 KillMode=process
 StandardOutput=journal+console
